# evidencegate

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  evidencegate.py  pyproject.toml
.github/workflows/: checks.yml
attestation/v0/: README.md  invalid-expired.json  invalid-tampered-receipt.json  invalid-wrong-issuer.json  invalid-wrong-subject.json  manifest.json  threat-model.md  (+1 more)
docs/: architecture.md  integration-contract.md  marketing-claims.md  migrating-to-v1.md  missing-evidence-is-not-safety.md  release-checklist.md  remarkable-roadmap.md  review-checklist.md  v0.1.0-release-notes.md  why-receipts.md
examples/: agent-run-receipt.json  browser-qa-regression.json  check_failure_semantics.py  failure-semantics.json  good-run.json  incomplete-agent-run.json  public-safety-publication.json  python-cli-bugfix.json  run-v1-reference.py  v1-not-review-ready.json  v1-review-ready.json  v1-stale-evidence.json  v1-unsupported-claim.json
schemas/: agent-run-receipt-v1.schema.json  cli-result-v1.schema.json  evidencegate-attestation-v0.schema.json
templates/: agent-run-receipt-v1.template.json  agent-run-receipt.template.json
tests/: test_attestation_contract.py  test_attestation_profile.py  test_conformance.py  test_evidencegate.py  test_failure_semantics.py  test_reference_run.py  test_reviewer_study.py
tools/: attestation_profile.py  check_attestation_conformance.py  check_conformance.py  check_remarkable_candidate.py  check_reviewer_study.py  create_attestation_statement.py  prepare_reviewer_study.py  score_reviewer_study.py
(+13 files in other folders)
