[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "evidencegate"
version = "0.1.0.dev0"
description = "Revision-bound receipts for human-reviewed agent work"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "TheDarkniteFalls"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
test = [
  "jsonschema==4.26.0"
]

[project.urls]
Homepage = "https://github.com/TheDarkniteFalls/evidencegate"
Issues = "https://github.com/TheDarkniteFalls/evidencegate/issues"

[project.scripts]
evidencegate = "evidencegate:main"

[tool.setuptools]
py-modules = ["evidencegate"]
